--- a/package.json
+++ b/package.json
@@ -16,6 +16,25 @@
     "forever": "^0.11.1",
     "mongojs": "^0.14.0",
     "morgan": "^1.2.3",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file": "^0.2.2",
+    "file-loader": "^0.8.4",
+    "forever": "^0.15.1",
+    "gulp": "^3.9.0",
+    "gulp-filter": "^3.0.0",
+    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.4.2",
+    "gulp-size": "^1.2.3",
+    "gulp-stylus": "^2.0.5",
+    "gulp-util": "^3.0.6",
+    "highlight.js": "^8.6.0",
+    "https": "^1.0.0",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
+    "jeet": "^6.1.2",
+    "jest-cli": "^0.4.17",
     "moment": "*"
   },
   "engines": {
